ui/scrollview.info/sample/ui/main.reel/main.css
/* Setup code */

body, html {
    height: 100%;
}

body {
    display: flex;
    flex-direction: column;
}

.Main {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.container {
    /*max-width: 1200px;*/
    flex: 1;
    display: flex;
    flex-direction: column;
}

.examples {
    flex: 1;
    display: flex;
    flex-direction: row;
    outline: 1px solid red;
    height: 5em;
}

.horizontal-container {
    flex: 1;
    position: relative;
    height: 5em;
}


.boxes .box {
    display: inline-block;
    width: 800px;
}

.box {
    display: inline-block;
    width: 20em;
    height: 5em;
    background: pink;
}

.default-box,
.vertical-box,
.horizontal-box {
    float: left;
    margin-left: 1em;
    position: relative;
    outline: 1px solid #fff;
    display: flex;
    flex-direction: column;
}

/* End Setup Code */

.default-box {
    position: relative;
    height: 500px;
    width: 300px;
}

.vertical-box {
    position: relative;
    height: 500px;
    width: 300px;
}

.horizontal-box {
    height: 200px;
    width: 300px;
    white-space: nowrap;
    position: relative;
}

/* inception */

.innerVertical {
    width: 25em;
    outline: 1px solid red;
    padding: .5em;
}

.content {
    display: flex;
    flex: 1;
}

